<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_main">
        <item
            android:id="@+id/sub_setting"
            android:icon="@drawable/ic_subscriptions_white_24dp"
            android:title="@string/title_sub_setting" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/title_settings" />
        <item android:id="@+id/user_asset_setting" android:icon="@drawable/ic_file_white_24dp" android:title="@string/title_user_asset_setting"/>
        <item
            android:id="@+id/logcat"
            android:icon="@drawable/ic_logcat_white_24dp"
            android:title="@string/title_logcat" />

    </group>

    <group android:id="@+id/group_id2">

        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/baseline_privacy_tip_24"
            android:title="@string/title_privacy_policy" />

        <item android:id="@+id/youtube"
            android:icon="@drawable/ic_youtube"
            android:title="@string/youtube"/>

        <item android:id="@+id/tele_group"
            android:icon="@drawable/ic_plane"
            android:title="@string/telegram"/>
        <item
                android:id="@+id/about"
                android:icon="@drawable/ic_feedback_white_24dp"
                android:title="@string/about" />
        <!-- place holder for version text at the bottom -->
        <item
                android:id="@+id/placeholder"
                android:enabled="false"
                android:title="" />
    </group>
</menu>
